# solana-serum-hackathon

./: .gitignore  App.js  README.md  metro.config.js  package-lock.json  package.json  shim.js
android/: settings.gradle
android/app/: build.gradle
ios/: Podfile
ios/AwesomeProject/: Info.plist
ios/AwesomeProject.xcodeproj/: project.pbxproj
mobile/: App.js  README.md  app.json  package.json
mobile/android/: settings.gradle
mobile/ios/: Podfile
mobile/ios/AwesomeProject/: Info.plist
mobile/ios/AwesomeProject.xcodeproj/: project.pbxproj
mobile/ios/SolanaSavings/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
mobile/ios/SolanaSavings.xcodeproj/: project.pbxproj
mobile/ios/SolanaSavings.xcworkspace/: contents.xcworkspacedata
mobile/ios/SolanaSavingsTests/: SolanaTests.m
mobile/src/: examples.ts
mobile/src/crypto/: account.ts  balance.ts  transfer.ts  withdraw.ts
mobile/src/screens/: Merchant.tsx  Savings.tsx  Wallet.tsx
mobile/src/utils/: Constants.ts
savings-contract/: .gitignore
savings-contract/cli/: Cargo.toml
savings-contract/cli/src/: main.rs
savings-contract/program/: Cargo.toml
savings-contract/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs  token.rs
savings-contract/program/tests/: tests.rs
src/: examples.ts
src/components/loader/: index.tsx
src/crypto/: account.ts  pool.ts  transfer.ts
src/crypto/utils/: constants.ts  instructions.ts
src/screens/: Merchant.tsx  Savings.tsx  Settings.tsx  Wallet.tsx
src/screens/qr_scanner/: Scanner.tsx  (+1 more)
src/utils/: Constants.ts
(+12 files in other folders)
