[package]
name = "cli"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
serde_json = "1.0.61"
solana-account-decoder = "1.5.6"
solana-clap-utils = "1.5.6"
solana-cli-config = "1.5.6"
solana-client = "1.5.6"
solana-logger = "1.5.6"
solana-sdk = "1.5.6"
solana-program = "1.5.6"
savings-contract = { path="../program", features = [ "no-entrypoint" ] }
bs58 = "0.4.0"
