[package]
name = "savings-contract"
version = "0.1.0"
authors = ["Yuriy Savchenko <yuriy.savchenko@gmail.com>"]
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.5.6"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "1.5.6"
solana-sdk = "1.5.6"
tokio = { version = "0.3", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]